# email-automater

./: .coverage  .gitignore  Makefile  README.md  README_GO.md  automate_emails.py  go.mod  go.sum  main.go  pyproject.toml  requirements.txt  run_followups.sh  scheduler.csv  send_followups.py
.github/workflows/: python-ci.yml
internal/argparse/: parseargs.go
internal/config/: config.go
internal/gmail/: gmail.go
internal/scheduler/: scheduler.go
internal/streak/: streak.go
setupHelp/: _setup.md  email_template.txt  run_test.sh  send_email.sh  send_email_directly.py  send_email_now.sh  test_gmail_api.py
tests/: __init__.py  schedule_helper.py  test_automate_emails.py  test_cron_setup.py  test_email_args.py  test_followup.py  test_gmail.py  test_schedule_helper.py  test_send_followups.py  test_streak.py
utils/: __init__.py  cron_setup.py  customformatter.py  email_args.py  followup.py  funcs.py  gmail.py  schedule_helper.py  streak.py
